@@ -24,6 +24,7 @@ around 'view' => sub {
     $out->{ore} = $building->body->get_ore_status;
     $out->{food} = $building->body->get_food_status;
     $out->{next_colony_cost} = $empire->next_colony_cost;
+    $out->{pod_delay} = $building->pod_delay;
     return $out;
 };
 
